tests/errors/semantic/blocking/None_isnot.py
def none_is_none():
    if None is not None:
        return False
